--- a/package.json
+++ b/package.json
@@ -1,9 +1,55 @@
 {
   "name": "web3w-torus",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "torus module for web3w",
-  "main": "index.js",
-  "repository": "git@github.com:wighawag/web3w-torus.git",
-  "author": "Wighawag <wighawag@gmail.com>",
-  "license": "MIT"
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
+  "browser": "dist/amd/index.js",
+  "files": [
+    "dist/"
+  ],
+  "author": "Ronan Sandford",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh@github.com:wighawag/web3w-torus.git"
+  },
+  "keywords": [
+    "web3w",
+    "web3",
+    "wallet",
+    "torus",
+    "ethereum"
+  ],
+  "devDependencies": {
+    "@ethersproject/bignumber": "^5.0.0",
+    "@ethersproject/contracts": "^5.0.0",
+    "@ethersproject/providers": "^5.0.0",
+    "@toruslabs/torus-embed": "^1.8.3",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "terser": "^5.2.1",
+    "terser-folder": "^2.0.0",
+    "typescript": "^3.8.3",
+    "web3w": "^0.2.10"
+  },
+  "scripts": {
+    "prepare": "node .setup.js && npm run lint && npm run build",
+    "dev": "tsc -w -p tsconfig.json",
+    "build:esm": "rimraf dist/esm && tsc -p tsconfig.json",
+    "build:cjs": "rimraf dist/cjs && tsc -p tsconfig-cjs.json",
+    "build:amd": "rimraf dist/amd && tsc -p tsconfig-amd.json && terser-folder dist/amd -e -x .js -o dist/amd --config-file terser.json",
+    "build": "run-s build:esm build:cjs build:amd",
+    "lint": "eslint src/**/*.{js,ts,tsx} --quiet --fix"
+  },
+  "dependencies": {
+    "named-logs": "^0.0.6"
+  }
 }
