--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "web3w-torus",
+  "name": "web3w-torus-loader",
   "version": "0.1.0",
-  "description": "torus module for web3w",
+  "description": "torus module loader for web3w",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -13,7 +13,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+ssh@github.com:wighawag/web3w-torus.git"
+    "url": "git+ssh@github.com:wighawag/web3w-torus-loader.git"
   },
   "keywords": [
     "web3w",
@@ -38,7 +38,7 @@
     "terser": "^5.2.1",
     "terser-folder": "^2.0.0",
     "typescript": "^3.8.3",
-    "web3w": "^0.2.10"
+    "web3w": "^0.2.11"
   },
   "scripts": {
     "prepare": "node .setup.js && npm run lint && npm run build",
